WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163252
AX: Expose invalid status for input types with that information
https://bugs.webkit.org/show_bug.cgi?id=163252
Summary
AX: Expose invalid status for input types with that information
Nan Wang
Reported
2016-10-10 16:24:11 PDT
For input types like number, url and email. We should expose the invalid status to assistive technology.
Attachments
patch
(5.72 KB, patch)
2016-10-10 16:34 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-10-10 16:24:32 PDT
<
rdar://problem/28704409
>
Nan Wang
Comment 2
2016-10-10 16:34:56 PDT
Created
attachment 291182
[details]
patch
chris fleizach
Comment 3
2016-10-10 16:43:31 PDT
do we also have a bug for exposing if the input type is URL/email/etc etc
Nan Wang
Comment 4
2016-10-10 16:48:33 PDT
(In reply to
comment #3
)
> do we also have a bug for exposing if the input type is URL/email/etc etc
Yes.
WebKit Commit Bot
Comment 5
2016-10-10 17:14:15 PDT
Comment on
attachment 291182
[details]
patch Clearing flags on attachment: 291182 Committed
r207035
: <
http://trac.webkit.org/changeset/207035
>
WebKit Commit Bot
Comment 6
2016-10-10 17:14:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug