AX: Expose invalid status for input types with that information https://bugs.webkit.org/show_bug.cgi?id=163252 <rdar://problem/28704409>

Reviewed by Chris Fleizach.

Source/WebCore:

For input types with invalid input value, we should expose the invalid
status to the assitive technology.

Test: accessibility/mac/invalid-status-for-input-types.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::invalidStatus):

LayoutTests:

* accessibility/mac/invalid-status-for-input-types-expected.txt: Added.
* accessibility/mac/invalid-status-for-input-types.html: Added.


Canonical link: https://commits.webkit.org/181083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207035 268f45cc-cd09-0410-ab3c-d52691b4dbfc